# tutorials

./: .gitignore  README.md
asr-tutorial/: README.md  pyproject.toml  tutorial.ipynb
asr-tutorial/asr/: __init__.py  audio.py  dataset.py  evaluate.py  finetune.py  taxonomy.json  text.py  transcribe.py
